--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="script.js"></script>
   
   
   
